# md-indexer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pre-release.yml  tagged-release.yml
src/: document.rs  file.rs  main.rs  model.rs  page.rs  util.rs
